--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,4 +1,4 @@
 <% @tweets.each do |tweet| %>
-	<h1><%= tweet.title %></h1>
+	<h6><strong><%= tweet.user.email %></strong></h6>
 	<h4><%= tweet.body %></h4>
 <% end %>
