Configure new columns on devise and change index view

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,4 +1,4 @@
 <% @tweets.each do |tweet| %>
-	<h6><strong><%= tweet.user.email %></strong></h6>
+	<h6><strong><%= tweet.user.fullname %></strong> <%= tweet.user.username %></h6>
 	<h4><%= tweet.body %></h4>
 <% end %>
