--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,14 +45,30 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">TwitterLikeApp</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <li><%= link_to "Home", "/path1"  %></li>
+            <li><%= link_to "Notifications", "/path2"  %></li>
+            <li><%= link_to "Messages", "/path3"  %></li>
           </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to("Log out", destroy_user_session_path, method: :delete) %></li>
+            </ul>
+          </li>
+         </ul>
+
         </div>
+
+        
+
       </div>
     </div>
 
@@ -64,10 +80,6 @@
         </div>
         
       </div><!--/row-->
-
-      <footer>
-        <p>&copy; Bruno Buegare</p>
-      </footer>
 
     </div> <!-- /container -->
 
