--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,4 +1,4 @@
 <% @tweets.each do |tweet| %>
-	<h6><strong><%= tweet.user.fullname %></strong> <%= tweet.user.username %></h6>
+	<h6><strong><%= tweet.user.fullname %></strong> <%= tweet.user.username %> <%= time_ago_in_words(tweet.created_at) %> ago</h6>
 	<h5><%= tweet.body %></h5>
 <% end %>
