Now the user sees only the tweets from whom he is folloing

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -11,7 +11,7 @@
 		<div class="row">
 			<div class="col-md-4 left-menu-info">
 				<h4>Tweets</h4>
-				<h5><%= @tweets.count %></h5>
+				<h5><%= @mytweets.count %></h5>
 			</div>
 			<div class="col-md-4 left-menu-info">
 				<h4>Following</h4>
