Add javascript to make Tweet text are to expand on mouse click Change index action on Tweet controller to create a intance of tweet Add route to authenticated_user on home button on navbar Delete new view since the new Tweet form is on index view now

--- a/app/assets/stylesheets/tweets.scss.css
+++ b/app/assets/stylesheets/tweets.scss.css
@@ -15,9 +15,15 @@
 	padding-left: 10px;
 }
 
+.tweet-btn {
+	float: right;
+	margin-top: 5px;
+}
+
 .row {
 	border: solid 1px red;
 }
 [class^="col"] {
 	border: solid 1px blue;
 }
+
