--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         </button>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Home", "/path1"  %></li>
+            <li><%= link_to "Home", authenticated_root_path  %></li>
             <li><%= link_to "Notifications", "/path2"  %></li>
             <li><%= link_to "Messages", "/path3"  %></li>
           </ul>
