--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @tweet do |f| %>
-	<div class="col-md-12">
-		<%= f.text_area :body, placeholder: "What's going on ?", class: 'form-control txt-area' %>
-		<%= f.submit 'Tweet', class: 'btn btn-info tweet-btn' %>
+	<div class="col-md-12" id="tweet-area-div">
+		<%= f.text_area :body, placeholder: "What's going on ?", class: 'form-control', id: 'txt-area' %>
+		<%= f.submit 'Tweet', class: 'btn btn-info', id: 'tweet-btn' %>
 	</div>
 <% end %>
