--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,6 +1,15 @@
 <%= form_for @tweet do |f| %>
-	<div class="col-md-12" id="tweet-area-div">
-		<%= f.text_area :body, placeholder: "What's going on ?", class: 'form-control', id: 'txt-area' %>
-		<%= f.submit 'Tweet', class: 'btn btn-info', id: 'tweet-btn' %>
+	<div class="row" id="tweet-area-div">
+		<div class="col-md-12">
+			<%= f.text_area :body, placeholder: "What's going on ?", class: 'form-control', id: 'txt-area' %>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-3 col-md-offset-9">
+			<%= f.submit 'Tweet', class: 'btn btn-info', id: 'tweet-btn' %>
+			<div id="counter">140</div>
+		</div>
 	</div>
 <% end %>
+
