Add friendly_id and configure url to show username

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -4,8 +4,8 @@
 			<div class="col-md-4">
 			</div>
 			<div class="col-md-8">
-				<h4><%= link_to current_user.fullname, user_path(current_user.id)  %></h4>
-				<h6><%= link_to current_user.username, user_path(current_user.id)  %></h6>
+				<h4><%= link_to current_user.fullname, user_path(current_user)  %></h4>
+				<h6><%= link_to current_user.username, user_path(current_user)  %></h6>
 			</div>
 		</div>
 		<div class="row">
