--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,19 @@
+<div class="row">
+	<div class="col-md-4">
+	</div>
+	<div class="col-md-4">
+		<div class="col-md-6">
+			<h5>following</h5>
+		</div>
+		<div class="col-md-6">
+			<h5>followers</h5>
+		</div>
+	</div>
+	<div class="col-md-4">
+		<button>Edit Profile</button>
+	</div>
+</div>
+
+
+
 <h1><%= @user.fullname %></h1>
