Install and configure paperclip gem
change index view of tweet controller to add image of the user
Add route to user#update
Update User controller

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,24 +2,35 @@
 	<div class="col-md-3 user-info">
 		<div class="row">
 			<div class="col-md-4">
+
+				<% if current_user.image.exists? %>
+					<%= image_tag current_user.image.url(:thumb) %>
+				<% else %>
+					<%= form_for @user, html: { multipart: true } do |f| %>
+						<%= f.file_field :image %>
+						<%= f.submit %>
+					<% end %>
+				<% end %>
+
 			</div>
 			<div class="col-md-8">
 				<h4><%= link_to current_user.fullname, user_path(current_user)  %></h4>
 				<h6><%= link_to current_user.username, user_path(current_user)  %></h6>
 			</div>
 		</div>
+		
 		<div class="row">
 			<div class="col-md-4 left-menu-info">
 				<h4>Tweets</h4>
-				<h5><%= @mytweets.count %></h5>
+				<h5><%= current_user.tweets.count %></h5>
 			</div>
 			<div class="col-md-4 left-menu-info">
 				<h4>Following</h4>
-				<h5><%= @follows.count %></h5>
+				<h5><%= current_user.follows.map(&:following).count %></h5>
 			</div>
 			<div class="col-md-4 left-menu-info">
 				<h4>Followers</h4>
-				<h5><%= @followers.count %></h5>
+				<h5><%= current_user.followers.count %></h5>
 			</div>
 		</div>
 	</div>
