--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -6,7 +6,7 @@
 				<% if current_user.image.exists? %>
 					<%= image_tag current_user.image.url(:thumb) %>
 				<% else %>
-					<%= form_for @user, html: { multipart: true } do |f| %>
+					<%= form_for current_user, html: { multipart: true } do |f| %>
 						<%= f.file_field :image %>
 						<%= f.submit %>
 					<% end %>
