--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -4,7 +4,7 @@
 			<div class="col-md-4">
 
 				<% if current_user.image.exists? %>
-					<%= image_tag current_user.image.url(:thumb) %>
+					<a href="#"><%= image_tag current_user.image.url(:thumb), class: "img-thumbnail" %></a>
 				<% else %>
 					<%= form_for current_user, html: { multipart: true } do |f| %>
 						<%= f.file_field :image %>
