--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,18 @@
 <div class="row">
+	<%= image_tag current_user.image.url(:large), id: "image_header" %>
+</div>
+
+<div class="row">
 	<div class="col-md-4">
 	</div>
 	<div class="col-md-4">
 		<div class="col-md-6">
 			<h5>following</h5>
+			<h5 id="margin-left-show-view"><%= current_user.follows.map(&:following).count %></h5>
 		</div>
 		<div class="col-md-6">
 			<h5>followers</h5>
+			<h5 id="margin-left-show-view"><%= current_user.followers.count %></h5>
 		</div>
 	</div>
 	<div class="col-md-4">
@@ -14,6 +20,17 @@
 	</div>
 </div>
 
-
-
-<h1><%= @user.fullname %></h1>
+<div class="row">
+	<div class="col-md-4">
+		<h1><%= @user.fullname %></h1>
+	</div>
+	<div class="col-md-4 feed">
+		<% @tweets.each do |tweet| %>
+			<h6><strong><%= tweet.user.fullname %></strong> <%= tweet.user.username %> <%= time_ago_in_words(tweet.created_at) %> ago</h6>
+				<p><%= tweet.body %></p>
+		<% end %>
+	</div>
+	<div class="col-md-4">
+		<h1><%= @user.fullname %></h1>
+	</div>
+</div>
