--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,22 +7,28 @@
 	</div>
 	<div class="col-md-4">
 		<div class="col-md-6">
-			<h5>following</h5>
+			<h4>following</h4>
 			<h5 id="margin-left-show-view"><%= current_user.follows.map(&:following).count %></h5>
 		</div>
 		<div class="col-md-6">
-			<h5>followers</h5>
+			<h4>followers</h4>
 			<h5 id="margin-left-show-view"><%= current_user.followers.count %></h5>
 		</div>
 	</div>
 	<div class="col-md-4">
-		<button>Edit Profile</button>
+		<button class="btn btn-default edit-profile-button">Edit Profile</button>
 	</div>
 </div>
 
 <div class="row">
 	<div class="col-md-4">
-		<h1><%= @user.fullname %></h1>
+		<div id="medium-user-profile-image">
+			<span><%= link_to image_tag current_user.image.url(:medium), class: "img-thumbnail" %></span>
+			<h3><%= current_user.fullname %></h3>
+			<h4><%= current_user.username %></h4>
+			<br>
+			<h4>Joined <%= current_user.created_at.strftime("%B") %> <%= current_user.created_at.year %></h4>
+		</div>
 	</div>
 	<div class="col-md-4 feed">
 		<% @tweets.each do |tweet| %>
@@ -30,7 +36,5 @@
 				<p><%= tweet.body %></p>
 		<% end %>
 	</div>
-	<div class="col-md-4">
-		<h1><%= @user.fullname %></h1>
-	</div>
+
 </div>
