--- a/app/assets/stylesheets/custom.scss.css
+++ b/app/assets/stylesheets/custom.scss.css
@@ -1,3 +1,11 @@
 .add-border-to-nav-links {
-	border-bottom: blue solid 4px;
+	border-bottom: 5px solid #1b95e0;
+    transition: all .15s ease-in-out;
+    height: 50px;
+}
+
+.add-border-to-nav-links-home {
+	border-bottom: 5px solid #1b95e0;
+    transition: all .15s ease-in-out;
+    height: 50px;
 }
