--- a/app/views/users/_user_lookup.html.erb
+++ b/app/views/users/_user_lookup.html.erb
@@ -2,7 +2,7 @@
 	<% if @users_found %>
 	  <% @users_found.each do |uf| %>
 	    <li class="search-suggestions-box-items">
-	    	<span><%= link_to image_tag current_user.image.url(:thumb), class: "user-image-on-search-suggestion-box" %></span>
+	    	<span><%= link_to image_tag uf.image.url(:thumb), class: "user-image-on-search-suggestion-box" %></span>
 	    	<strong><%= uf.fullname %></strong>
 	    	<small><%= uf.username %></small>
 	    	<h6 class="friendship-status">Status</h6>
