--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,20 @@
 <div class="row">
-	<%= image_tag current_user.image.url(:large), id: "image_header" %>
+	<%= image_tag @user.image.url(:large), id: "image_header" %>
 </div>
 
 <div class="row">
 	<div class="col-md-4 col-md-offset-4">
 		<div class="col-md-4">
 			<h4>tweets</h4>
-			<h5 class="margin-show-view"><%= current_user.tweets.count %></h5>
+			<h5 class="margin-show-view"><%= @user.tweets.count %></h5>
 		</div>
 		<div class="col-md-4">
 			<h4>following</h4>
-			<h5 class="margin-show-view"><%= current_user.follows.map(&:following).count %></h5>
+			<h5 class="margin-show-view"><%= @user.follows.map(&:following).count %></h5>
 		</div>
 		<div class="col-md-4">
 			<h4>followers</h4>
-			<h5 class="margin-show-view"><%= current_user.followers.count %></h5>
+			<h5 class="margin-show-view"><%= @user.followers.count %></h5>
 		</div>
 	</div>
 	<div class="col-md-4">
@@ -25,11 +25,11 @@
 <div class="row">
 	<div class="col-md-4">
 		<div id="medium-user-profile-image">
-			<span><%= link_to image_tag current_user.image.url(:medium), class: "img-thumbnail" %></span>
-			<h3><%= current_user.fullname %></h3>
-			<h4><%= current_user.username %></h4>
+			<span><%= link_to image_tag @user.image.url(:medium), class: "img-thumbnail" %></span>
+			<h3><%= @user.fullname %></h3>
+			<h4><%= @user.username %></h4>
 			<br>
-			<h4>Joined <%= current_user.created_at.strftime("%B") %> <%= current_user.created_at.year %></h4>
+			<h4>Joined <%= @user.created_at.strftime("%B") %> <%= @user.created_at.year %></h4>
 		</div>
 	</div>
 	<div class="col-md-4 feed">
