Style button on show view

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
 		</div>
 	</div>
 	<div class="col-md-4">
-		<button class="btn btn-default edit-profile-button">Edit Profile</button>
+		<button class="btn btn-default edit-profile-button"><%= get_actions(@user.id) %></button>
 	</div>
 </div>
 
