--- a/app/assets/stylesheets/users.scss.css
+++ b/app/assets/stylesheets/users.scss.css
@@ -21,6 +21,7 @@
 
 .edit-profile-button {
 	margin-left: 190px;
-	margin-top: 15px;
-	width: 90px;
+	margin-top: 10px;
+	width: 100px;
+	height: 40px;
 }
