--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,38 +19,39 @@
     <![endif]-->
   </head>
   <body>
+    
+    <% if user_signed_in? %>
+      <div class="navbar navbar-default navbar-static-top">
+        <div class="container">
 
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
+            <ul class="nav navbar-nav">
+              <li class="nav-links"><%= link_to "Home", authenticated_root_path, class: current_page?("/") ? "add-border-to-nav-links-home" : "" %></li>
+              <li class="nav-links"><%= link_to "Notifications", "/path2", class: "add-border-to-nav-links" %></li>
+              <li class="nav-links"><%= link_to "Messages", "/path3", class: "add-border-to-nav-links" %></li>
+            </ul>
 
-          <ul class="nav navbar-nav">
-            <li class="nav-links"><%= link_to "Home", authenticated_root_path, class: current_page?("/") ? "add-border-to-nav-links-home" : "" %></li>
-            <li class="nav-links"><%= link_to "Notifications", "/path2", class: "add-border-to-nav-links" %></li>
-            <li class="nav-links"><%= link_to "Messages", "/path3", class: "add-border-to-nav-links" %></li>
-          </ul>
+            <form class="navbar-form navbar-right" role="search">
+              <div class="form-group">
+                <input type="text" class="form-control" id="search-box" placeholder="Search users in The Owl">
+              </div>
+            </form>
 
-          <form class="navbar-form navbar-right" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" id="search-box" placeholder="Search users in The Owl">
-            </div>
-          </form>
+            <%= render 'users/user_lookup' %>
 
-          <%= render 'users/user_lookup' %>
-
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= image_tag("owl.png", id: "nav-bar-image") %></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to current_user.fullname, user_path(current_user) if user_signed_in? %></li>
-                <li role="separator" class="divider"></li>
-                <li><%= link_to("Log out", destroy_user_session_path, method: :delete) %></li>
-              </ul>
-            </li>
-         </ul>
-      
+            <ul class="nav navbar-nav navbar-right">
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= image_tag("owl.png", id: "nav-bar-image") %></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to current_user.fullname, user_path(current_user) %></li>
+                  <li role="separator" class="divider"></li>
+                  <li><%= link_to("Log out", destroy_user_session_path, method: :delete) %></li>
+                </ul>
+              </li>
+           </ul>
+        
+        </div>
       </div>
-    </div>
-
+    <% end %>
 
     <%= bootstrap_flash %>
     <%= yield %>
