Implement following page

--- a/app/assets/stylesheets/tweets.scss.css
+++ b/app/assets/stylesheets/tweets.scss.css
@@ -25,10 +25,10 @@
 	margin: 10px 10px 0px 0px;
 }
 
-.row {
+/*.row {
 	border: solid 1px red;
 }
 [class^="col"] {
 	border: solid 1px blue;
 }
-
+*/
