--- a/app/views/friendships/handle_friendship.js.erb
+++ b/app/views/friendships/handle_friendship.js.erb
@@ -1,5 +1,3 @@
-// $('.edit-profile-button').replaceWith('<%= j button_to get_actions(@user.id), handle_friendship_path(:user_id => @user.id), remote: true, class: "btn btn-default edit-profile-button" %>');
+$('.friendship_button form').remove()
 
-$('.bla form').remove()
-
-$('.bla').append('<%= j render("users/friendship_button") %>');
+$('.friendship_button').append('<%= j button_to get_actions(@user.id), handle_friendship_path(:user_id => @user.id), remote: true, class: "btn btn-default edit-profile-button" %>');
