--- a/app/views/users/show_following.html.erb
+++ b/app/views/users/show_following.html.erb
@@ -4,11 +4,11 @@
 
 <div class="row info-bar-border">
 	<div class="col-md-4 col-md-offset-4">
-		<div class="col-md-4 info-bar-border-color info-bar-width-height info-bar-hover">
+		<div class="col-md-4 info-bar-width-height info-bar-hover">
 			<h4 class="text-center">tweets</h4>
 			<h5 class="margin-show-view text-center"><%= @user.tweets.count %></h5>
 		</div>
-		<div class="col-md-4 info-bar-width-height info-bar-hover">
+		<div class="col-md-4 info-bar-border-color info-bar-width-height info-bar-hover">
 			<h4 class="text-center"><%= link_to 'following', show_following_path() %></h4>
 			<h5 class="margin-show-view text-center"><%= @user.follows.map(&:following).count %></h5>
 		</div>
@@ -17,7 +17,7 @@
 			<h5 class="margin-show-view text-center"><%= @user.followers.count %></h5>
 		</div>
 	</div>
-	<div class="col-md-4 friendship_button">
+	<div class="col-md-4 friendship-button">
 		<%= button_to get_actions(@user.id), handle_friendship_path(:user_id => @user.id), remote: true, class: "btn btn-default friendship-button-b show-friendship-button" %>
 	</div>
 </div>
@@ -32,10 +32,24 @@
 			<h4>Joined <%= @user.created_at.strftime("%B") %> <%= @user.created_at.year %></h4>
 		</div>
 	</div>
-	<div class="col-md-4 feed">
-		<% @tweets.each do |tweet| %>
-			<h6><strong><%= tweet.user.fullname %></strong> <%= tweet.user.username %> <%= time_ago_in_words(tweet.created_at) %> ago</h6>
-				<p><%= tweet.body %></p>
+	<div class="col-md-8">
+		<% @user.follows.each do |f| %>
+			<% if f.following %>
+				<div class="col-md-4 show-following">
+					<% user = find_user(f.following) %>
+					<div class="row">
+						<%= image_tag user.image.url(:large), class: "show-following-large-image" %>
+					</div>
+					<div class="row friendship-button">
+						<%= image_tag user.image.url(:thumb), class: "show-following-thumb-image" %>
+						<%= button_to get_actions(user.id), handle_friendship_path(:user_id => user.id), remote: true, class: "btn btn-default show-following-friendship-button" %>
+					</div>
+					<div class="row show-following-username">
+						<h4><strong><%= user.fullname %></strong></h4>
+						<h5><%= user.username %></h5>
+					</div>
+				</div>
+			<% end %>
 		<% end %>
 	</div>
 
