--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,39 +1,7 @@
-<div class="row">
-	<%= image_tag @user.image.url(:large), id: "image_header" %>
-</div>
+<%= render 'show_partial' %>
 
-<div class="row info-bar-border">
-	<div class="col-md-4 col-md-offset-4">
-		<div class="col-md-4 info-bar-border-color info-bar-width-height info-bar-hover">
-			<h4 class="text-center">tweets</h4>
-			<h5 class="margin-show-view text-center"><%= @user.tweets.count %></h5>
-		</div>
-		<div class="col-md-4 info-bar-width-height info-bar-hover">
-			<h4 class="text-center"><%= link_to 'following', show_following_path() %></h4>
-			<h5 class="margin-show-view text-center"><%= @user.follows.map(&:following).count %></h5>
-		</div>
-		<div class="col-md-4 info-bar-width-height info-bar-hover">
-			<h4 class="text-center">followers</h4>
-			<h5 class="margin-show-view text-center"><%= @user.followers.count %></h5>
-		</div>
-	</div>
-	<div class="col-md-4 friendship_button">
-		<%= button_to get_actions(@user.id), handle_friendship_path(:user_id => @user.id), remote: true, class: "btn btn-default friendship-button-b show-friendship-button" %>
-	</div>
-</div>
-
-<div class="row">
-	<div class="col-md-4">
-		<div id="medium-user-profile-image">
-			<span><%= link_to image_tag @user.image.url(:medium), class: "img-thumbnail" %></span>
-			<h3><%= @user.fullname %></h3>
-			<h4><%= @user.username %></h4>
-			<br>
-			<h4>Joined <%= @user.created_at.strftime("%B") %> <%= @user.created_at.year %></h4>
-		</div>
-	</div>
 	<div class="col-md-4 feed">
-		<% @tweets.each do |tweet| %>
+		<% @user.tweets.each do |tweet| %>
 			<h6><strong><%= tweet.user.fullname %></strong> <%= tweet.user.username %> <%= time_ago_in_words(tweet.created_at) %> ago</h6>
 				<p><%= tweet.body %></p>
 		<% end %>
