--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
   <body>
     
     <% if user_signed_in? %>
-      <div class="navbar navbar-default navbar-static-top">
+      <div class="navbar navbar-default navbar-static-top navbar-border">
         <div class="container">
 
             <ul class="nav navbar-nav">
