--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -93,3 +93,7 @@ body {
 	border-top-right-radius: 3px;
 	border-top-left-radius: 3px;
 }
+
+.navbar-border {
+	border-bottom: 1px solid rgba(0,0,0,0.15);
+}
