--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,36 +2,40 @@
 	<div class="row">
 		<div class="col-md-3 user-info">
 			<div class="row">
+				<%= link_to image_tag current_user.image.url(:medium), class: "medium-image" %>
+			</div>
+
+			<div class="row">
 				<div class="col-md-4">
 
 					<!-- <!% if current_user.image.exists? %> -->
-						<%= link_to image_tag current_user.image.url(:thumb), class: "img-thumbnail" %>
+						<%= link_to image_tag current_user.image.url(:thumb), class: "thumb-image-home" %>
 					<!-- <!% else %> -->
-						<%= form_for current_user, html: { multipart: true } do |f| %>
-							<%= f.file_field :image %>
-							<%= f.submit %>
-						<% end %>
+						<!-- <!%= form_for current_user, html: { multipart: true } do |f| %>
+							<!%= f.file_field :image %>
+							<!%= f.submit %>
+						<!% end %> -->
 					<!-- <!% end %> -->
 
 				</div>
-				<div class="col-md-8">
-					<h4><%= link_to current_user.fullname, user_path(current_user)  %></h4>
+				<div class="col-md-8" id="user-info-user-name">
+					<h4><strong><%= link_to current_user.fullname, user_path(current_user)  %></strong></h4>
 					<h6><%= link_to current_user.username, user_path(current_user)  %></h6>
 				</div>
 			</div>
 			
-			<div class="row">
-				<div class="col-md-4 left-menu-info">
-					<h4>Tweets</h4>
-					<h5><%= current_user.tweets.count %></h5>
+			<div class="row" id="user-info-stats">
+				<div class="col-md-4">
+					<span><%= link_to 'TWEETS', user_path(), class: "info-bar-link" %></span>
+					<h4><%= current_user.tweets.count %></h4>
 				</div>
-				<div class="col-md-4 left-menu-info">
-					<h4>Following</h4>
-					<h5><%= current_user.follows.map(&:following).count %></h5>
+				<div class="col-md-4">
+					<span><%= link_to 'FOLLOWING', show_following_path(), class: "info-bar-link" %></span>
+					<h4><%= current_user.follows.count %></h4>
 				</div>
-				<div class="col-md-4 left-menu-info">
-					<h4>Followers</h4>
-					<h5><%= current_user.followers.count %></h5>
+				<div class="col-md-4">
+					<span><%= link_to 'FOLLOWERS', show_followers_path(), class: "info-bar-link" %></span>
+					<h4><%= current_user.followers.count %></h4>
 				</div>
 			</div>
 		</div>
