--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -14,13 +14,6 @@ body {
     height: 50px;
 }
 
-#nav-bar-image {
-	height: 50px;
-    width: 50px;
-    margin-top: -15px;
-    margin-bottom: -25px;
-}
-
 #nav-bar-image-signin-signout {
 	height: 120px;
 	margin-top: -45px;
@@ -94,6 +87,7 @@ body {
 	border-top-left-radius: 3px;
 }
 
-.navbar-border {
+.navbar-border-margin {
 	border-bottom: 1px solid rgba(0,0,0,0.15);
+	margin-bottom: 10px;
 }
