--- a/app/assets/stylesheets/home_feed.scss
+++ b/app/assets/stylesheets/home_feed.scss
@@ -1,10 +1,20 @@
 .feed {
-	border-bottom: 1px solid #e1e8ed;
-	border-right: 1px solid #e1e8ed;
-	border-left: 1px solid #e1e8ed;
+	$border: 1px solid #e1e8ed; 
+	border-bottom: $border;
+	border-right: $border;
+	border-left: $border;
 	background-color: white;
+	height: 100px;
+
+	div>h6 {
+		position: relative;
+		right: 30px;
+	}
 
 	p {
 		word-wrap: break-word;
+		position: relative;
+		right: 30px;
+		bottom: 8px;
 	}
 }
