--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -42,16 +42,24 @@
 
 		<div class="col-md-6">
 			<div class="row">
-				<%= render 'form' %>
+				<%= render 'tweet_creation' %>
 			</div>
 			<% @tweets.each do |tweet| %>
 				<div class="row feed">
-					<div class="col-md-4">
-						<%= link_to image_tag current_user.image.url(:thumb), class: "feed-image" %>
+					<div class="col-md-2">
+						<%= link_to image_tag tweet.user.image.url(:thumb), class: "feed-image" %>
 					</div>
-					<div class="col-md-8">
-						<h6><strong><%= tweet.user.fullname %></strong> <%= tweet.user.username %> <%= time_ago_in_words(tweet.created_at) %> ago</h6>
-						<p><%= tweet.body %></p>
+					<div class="col-md-10">
+						<div class="row">
+							<h6>
+								<strong><%= tweet.user.fullname %></strong>
+								<%= tweet.user.username %>
+								<%= time_ago_in_words(tweet.created_at) %> ago
+							</h6>
+						</div>
+						<div class="row">
+							<p><%= tweet.body %></p>
+						</div>
 					</div>
 				</div>
 			<% end %>
