--- a/app/assets/stylesheets/home_tweet_creation.scss
+++ b/app/assets/stylesheets/home_tweet_creation.scss
@@ -4,10 +4,19 @@
 	background-color: #E8F5FD;
 	width: 585px;
 	margin-left: 0px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+
+	div:nth-child(3) div:nth-child(1) {
+		position: relative;
+		top: 13px;
+		right: 10px;
+	}
 }
 
 #txt-area {
 	$placeholder-color: #1b95e0;
+	$placeholder-line-height: 1.5em;
 
 	height: 36px;
 	width: 506px;
@@ -15,9 +24,41 @@
 	left: -45px;
 	top: 9px;
 	border-radius: 2px;
+	resize: none;
 
-	&::-webkit-input-placeholder { color: $placeholder-color; } /* Chrome/Opera/Safari */
-	&::-moz-placeholder { color: $placeholder-color; } /* Firefox 19+ */
-	&:-ms-input-placeholder { color: $placeholder-color; } /* IE 10+ */
-	&:-moz-placeholder { color: $placeholder-color; } /* Firefox 18- */
+	&::-webkit-input-placeholder { /* WebKit browsers */
+	  color: $placeholder-color;
+	  line-height: $placeholder-line-height;
+	}
+	&:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+	  color: $placeholder-color;
+	  line-height: $placeholder-line-height;
+	}
+	&::-moz-placeholder { /* Mozilla Firefox 19+ */
+	  color: $placeholder-color;
+	  line-height: $placeholder-line-height;
+	}
+	&:-ms-input-placeholder { /* Internet Explorer 10+ */
+	  color: $placeholder-color;
+	  line-height: $placeholder-line-height;
+	}
+}
+
+.txt-area-expanded::-moz-placeholder {
+		color: #ccd6dd !important;
+}
+
+#tweet-btn {
+	float: right;
+	margin-top: 5px;
+	height: 38px;
+	width: 97px;
+}
+
+#counter {
+	float: right;
+	position: relative;
+	right: 10px;
+	top: 13px;
+	color: #707e88;
 }
