--- a/app/assets/stylesheets/home_feed.scss
+++ b/app/assets/stylesheets/home_feed.scss
@@ -4,7 +4,8 @@
 	border-right: $border;
 	border-left: $border;
 	background-color: white;
-	height: 100px;
+	height: 100%;
+	min-height: 100px;
 
 	div>h6 {
 		position: relative;
