--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,16 +29,18 @@
               <li class="nav-links"><%= link_to "Notifications", "/path2", class: "add-border-to-nav-links" %></li>
               <li class="nav-links"><%= link_to "Messages", "/path3", class: "add-border-to-nav-links" %></li>
             </ul>
+            
+            <div id="search-and-suggestion-box-position">
+              <form class="navbar-form navbar-right" role="search">
+                <div class="form-group">
+                  <input type="text" class="form-control" id="search-box" autocomplete="off" placeholder="Search users in The Owl">
+                </div>
+              </form>
 
-            <form class="navbar-form navbar-right" role="search">
-              <div class="form-group">
-                <input type="text" class="form-control" id="search-box" placeholder="Search users in The Owl">
-              </div>
-            </form>
+              <%= render 'users/user_lookup' %>
+            </div>
 
-            <%= render 'users/user_lookup' %>
-
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right navbar-dropdown-position">
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= image_tag("owl.png", id: "nav-bar-image") %></a>
                 <ul class="dropdown-menu">
