--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -49,6 +49,7 @@
     border-style: solid;
     border-width: 0px 12px 10px 12px;
     border-color: $color transparent;
+    content: "";
 }
 
 #search-suggestions-box {
@@ -60,11 +61,11 @@
     border-radius: 5px;
 	background-color: #fff;
 	padding-top: 4px;
-	box-shadow: 0px 2px 10px rgba(0,0,0,0.25);
+	padding-bottom: 4px;
+	
+    &:after { @include arrow-on-top(-10px, 310px, #FFFFFF); }
 
-    &:after { @include arrow-on-top(-10px, 310px, #FFFFFF) }
-
-	&:before { @include arrow-on-top(-11px, 310px, #eee) }
+	&:before { @include arrow-on-top(-11px, 310px, #eee); }
 }
 
 #search-and-suggestion-box-position {
@@ -100,32 +101,53 @@
 	}
 }
 
-.navbar-dropdown-position {
+#navbar-dropdown {
 	position: relative;
-	right: 90px;
-	bottom: 20px;
+	width: 150px;
+	float: right;
+	top: 53px;
+	right: 30px;
+	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+	border: 1px #eee solid;
+	background-color: white;
+	border-radius: 4px;
+	font-size: 12px;
+	padding-top: 4px;
+	padding-bottom: 4px;
+	display: none;
 
-	&:after { @include arrow-on-top(63px, 23px, #FFFFFF) }
+	&:after { @include arrow-on-top(-9px, 27px, #FFFFFF); }
 
-	&:before { @include arrow-on-top(63px, 23px, #eee) }
+	&:before { @include arrow-on-top(-10px, 27px, #eee); }
 
-	li.dropdown.open {
-		
+	li {
+		list-style: none;
+		height: 50px;
+
 		a {
-			$color: rgba(248, 248, 248, 0);
-			background-color: $color;
-
-			&:focus { background-color: $color; }
+			position: relative;
+			top: 15px;
+			left: 15px;
+			display: block;
 		}
-	
-		ul { 
-			border-radius: 5px; 
-			border: 1px solid #eee;
+		&:first-child {
+			border-bottom: 1px #eee solid;
+			
+			a { color: black; }
 		}
 
-		li > a:hover {
-			background-color: #1b95e0 !important;
-			color: white;
+		&:last-child a { color: #707e88; }
+
+		&:hover {
+			background-color: #1b95e0;
+
+			a {
+				color: white;
+				text-decoration: none;
+				display: block;
+			}
 		}
 	}
+
+    
 }
