--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,18 +38,13 @@
               </form>
 
               <%= render 'users/user_lookup' %>
+              <%= image_tag("owl.png", id: "nav-bar-image") %>
             </div>
 
-            <ul class="nav navbar-nav navbar-right navbar-dropdown-position">
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= image_tag("owl.png", id: "nav-bar-image") %></a>
-                  <ul class="dropdown-menu">
-                    <li><%= link_to current_user.fullname, user_path(current_user) %></li>
-                    <li role="separator" class="divider"></li>
-                    <li><%= link_to("Log out", destroy_user_session_path, method: :delete) %></li>
-                  </ul>
-              </li>
-            </ul>
+            <div id="navbar-dropdown">
+              <li><strong><%= link_to current_user.fullname, user_path(current_user) %></strong></li>
+              <li><%= link_to("Log out", destroy_user_session_path, method: :delete) %></li>
+            </div>
         
         </div>
       </div>
